fix: bump some dependencies + pom adaptation to JDK 11
gravitee-parent 17.2 -> 20.2
gravitee-bom . -> 2.5
gravitee-gateway-api 1.23.0 -> 1.32.2
gravitee-policy-api 1.10.0 -> 1.11.0
gravitee-common 1.19.0 -> 1.26.1
commons-io 1.3.2 -> 2.11.0
jaxb-api 2.3.0 -> 2.3.1
jsonassert 1.4.0 -> 1.5.0
maven-assembly-plugin 2.5.5 -> 3.3.0

--- a/README.adoc
+++ b/README.adoc
@@ -29,6 +29,14 @@ JWT in JWS format enables secure content to be shared across security domains. T
 
 - JWT (Json Web Token) standard RFC: https://tools.ietf.org/html/rfc7519
 
+== Compatibility with APIM
+
+|===
+|Plugin version | APIM version
+
+|Up to 1.x                   | All
+|===
+
 === JWT
 
 A JWT is composed of three parts: a header, a payload and a signature.
