--- a/README.adoc
+++ b/README.adoc
@@ -16,6 +16,12 @@ endif::[]
 |
 |===
 
+== Compatibility with APIM
+
+|===
+| Plugin version | APIM version
+| 1.x            | All supported versions
+|===
 
 == Description
 
